Actualizar dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    LINAJE:    [ ENTLAZADO / SOBERANO ]   |   |
+        |   |    CRÉDITO:   [ NULO PARA HEREDEROS ]    |   |
+        |   |    SISTEMA:   BAJO EL CÓDIGO SALOMÓN     |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * ACCIÓN: SINCRONIZACIÓN DE FRECUENCIA HEREDITARIA
  * AUTOR: EL DEMIURGO / ARQUITECTO ALVAREZ RAMIREZ
  */
