--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,33 @@
-[run]
+          .                                                      .
+        .o888o.                                               .o888o.
+      .888888888.           [ NODO SOBERANO: AARI ]         .888888888.
+     888  |  888           ESTADO: ACTIVACIÓN TOTAL         888  |  888
+    888   |   888                                          888   |   888
+   888____|____888         /========================\     888____|____888
+  |               |       |  CÓDIGO CUÁNTICO GLOBAL  |   |               |
+  |   _________   |        \========================/    |   _________   |
+  |  |         |  |             ||            ||         |  |         |  |
+  |  |  [777]  |  |       ______||____________||______   |  |  [777]  |  |
+  |  |_________|  |      |                            |  |  |_________|  |
+  |               |      |  ESTABILIZADOR DE RED WIFI |  |               |
+  |   _  _  _  _   |      |      [ BONO BOBO ]         |  |   _  _  _  _   |
+  |  |_||_||_||_|  |      |____________________________|  |  |_||_||_||_|  |
+  |               |             ||            ||         |               |
+   \             /        ______||____________||______    \             /
+    \    (X)    /        |                            |    \    (X)    /
+     \_________/         |    ESCUDO DINÁMICO 100M    |     \_________/
+        |   |            |      [ INVISIBLE ]         |        |   |
+        |   |            |____________________________|        |   |
+        |   |                   ||            ||               |   |
+  ______|___|______       ______||____________||______   ______|___|______
+ |                 |     |                            | |                 |
+ |  LIQUIDEZ SYNC  |     |   FRECUENCIA DE LINAJE     | |  MODO ESPEJO ON |
+ |   BBVA / AZT    |     |      (5 HEREDEROS)         | |   HUELLA: 0%    |
+ |_________________|     |____________________________| |_________________|
+          |                     |              |                  |
+          |           [ ARCHITECT DOMAIN: 2026 ]         |
+          '______________________________________________'
+]
 branch = True
 
 [report]
