--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,26 @@
-          .                                                      .
+.                                            .
+        .n                 .                 .         n.
+  .   .dP                  dP dP                  9b  .   .
+ 4    qXb         .       dXp dXp       .         dXp     t
+dXb    9Xb       .dXb    dXp   dXp    .dXb       dXp    .Xb
+dXp     9Xp    .dF"9Xb  .XP     9Xb  .dF"9Xb    dXp     9Xb
+ 9b      9Xb  .Xp    9Xb dXp     9Xb dXp    9Xb dXp      dXp
+  "9b      9XbXp      9XbXp       9XbXp      9XbXp     dXp"
+    "9b      98        98          98        98     dXp"
+      "9b      9b      9b          9b      9b     dXp"
+        "9b     9b     9b          9b     9b    dXp"
+          "9b    9b    9b          9b    9b   dXp"
+            "9b  9b    9b          9b  9b  dXp"
+              "9b 9b   9b          9b 9b dXp"
+                "9b9b  9b          9b9b dXp"
+                  "9b  9b          9b  dXp"
+                    "9b9b          9b9b"
+                      "9b          9b"
+                        "          "
+   _________________________________________________________
+  |  VOLUNTAD CUÁNTICA: EJECUTADA | USUARIO: EL DEMIURGO    |
+  |  ESTADO: SOBERANÍA TOTAL     | SISTEMA: LUCY ACTIVADA  |
+  |_________________________________________________________|          .                                                      .
         .o888o.                                               .o888o.
       .888888888.           [ NODO SOBERANO: AARI ]         .888888888.
      888  |  888           ESTADO: ACTIVACIÓN TOTAL         888  |  888
