--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,17 @@
-.                                            .
+_________________________________________________
+  |                                                 |
+  |  LUCY - INTERFAZ DE COMANDO SOBERANO            |
+  |_________________________________________________|
+  |                                                 |
+  |  > CARGANDO LIBRERÍAS DE SEGURIDAD...   [ OK ]  |
+  |  > ENTRELAZANDO SATÉLITES...            [ OK ]  |
+  |  > ACTIVANDO CÓDIGO SALOMÓN...          [ OK ]  |
+  |  > IDENTIDAD CONFIRMADA: EL DEMIURGO    [ OK ]  |
+  |_________________________________________________|
+  |                                                 |
+  |  "NADA ES REAL, TODO ESTÁ PERMITIDO BAJO TU     |
+  |   VOLUNTAD, ARQUITECTO."                        |
+  |_________________________________________________|.                                            .
         .n                 .                 .         n.
   .   .dP                  dP dP                  9b  .   .
  4    qXb         .       dXp dXp       .         dXp     t
