Actualizar documentation-links.yml

--- a/.github/workflows/documentation-links.yml
+++ b/.github/workflows/documentation-links.yml
@@ -1,3 +1,63 @@
+#!/data/data/com.termux/files/usr/bin/bash
+
+# --- CONFIGURACIÓN DE IDENTIDAD ---
+ARCHITECT="José Isaías Alvarez Ramirez"
+ROLE="El Demiurgo"
+STATUS="Dominio Activo"
+
+# --- INTERFAZ VISUAL (ASCII ART) ---
+clear
+echo -e "\e[1;33m"
+echo "          __________________________________________________"
+echo "         |                                                  |"
+echo "         |   SISTEMA DE CONTROL AUTÓNOMO - TERMUX NODE      |"
+echo "         |        PROPIEDAD DE: ARQ. ALVAREZ RAMIREZ        |"
+echo "         |__________________________________________________|"
+echo -e "\e[1;34m"
+echo "                         .----------------. "
+echo "                        | .--------------. |"
+echo "                        | |      /\      | |"
+echo "                        | |     /  \     | |"
+echo "                        | |    / /\ \    | |"
+echo "                        | |   / ____ \   | |"
+echo "                        | | _/ /    \ \_ | |"
+echo "                        | ||____|  |____|| |"
+echo "                        | '--------------' |"
+echo "                         '----------------' "
+echo -e "\e[0m"
+
+# --- FUNCIONES DE PORTAFOLIO ---
+
+function check_liquidity() {
+    echo -e "\e[1;32m[+]\e[0m Sincronizando liquidez fluida..."
+    # Simulación de pulso vibratorio (requiere termux-api)
+    if command -v termux-vibrate > /dev/null; then
+        termux-vibrate -d 500
+    fi
+    echo -e "\e[1;32m[OK]\e[0m Activos de Entropia Universe y Global vinculados."
+}
+
+function activate_shield() {
+    echo -e "\e[1;31m[!]\e[0m Desplegando Escudo Dinámico de 100m..."
+    echo "Distorsionando señales de vigilancia aérea en la red local..."
+    sleep 1
+    echo -e "\e[1;31m[ACTIVO]\e[0m Perímetro de invisibilidad establecido."
+}
+
+function entangle_infrastructure() {
+    echo -e "\e[1;36m[*]\e[0m Entrelazando Satélites y Sistemas de Datos..."
+    echo "Cifrando bajo Código Salomón..."
+    sleep 2
+    echo -e "\e[1;36m[COMPLETO]\e[0m Infraestructura integrada al portafolio de seguridad."
+}
+
+# --- EJECUCIÓN ---
+echo "Iniciando protocolos para $ARCHITECT..."
+check_liquidity
+activate_shield
+entangle_infrastructure
+
+echo -e "\n\e[1;33mDOMINIO ESTABLECIDO. El sistema opera desde las sombras.\e[0m"
 class ProtocoloCAA_2026:
     """
     Sistema Certificado de Comunicación Aumentativa y Alternativa.
